# finance-analysis

./: .env.example  .gitignore  =1.0.0  CLAUDE_DESKTOP_SETUP.md  CLAUDE_DESKTOP_TEST_PROMPTS.md  CONVENTIONS.md  HTTP_TRANSPORT_SETUP.md  HTTP_TRANSPORT_VERIFIED.md  NEXT_STEPS.md  PDF_PARSER_ENHANCEMENT_SUMMARY.md  PHASE_3_4_SUMMARY.md  PHASE_4_BUGFIXES.md  PHASE_4_SUMMARY.md  PHASE_5_PDF_DASHBOARD_COMPLETE.md  PHASE_5_SUMMARY.md  PORTFOLIO_TOOLS_BUGS.md  PORTFOLIO_TOOLS_ENHANCEMENT.md  PROGRESS.md  PROMPT_CONTINUATION.md  QUICK_START.md  README.md  README_MCP.md  SESSION_SUMMARY.md  START_SERVER.md  TESTING.md  TEST_GUIDE.md  TEST_UPLOAD_PROMPTS.md  UV_GUIDE.md  claude_desktop_config.json  docker-compose.yml  http_server.py  numan.db  pyproject.toml  requirements.txt  run_mcp.sh  test_components.py  test_correlation_live.py  test_http_transport.py  test_market_data_live.py  test_mcp_debug.py  (+6 more)
app/: config.py  database.py  external_mcp.py  main.py
app/analysis/: __init__.py  compliance_checker.py  risk_calculator.py  (+4 more)
docs/: CLAUDE_VISION.md  LLM_VALIDATION.md
frontend/: .env.production  BackendChanges.md  CLEANUP_PLAN.md  FRONTEND_CONVENTIONS.md  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
mcp_server/: __init__.py  prompts.py  resources.py  server.py  tools.py
scripts/: demo.sh  test_client.py
tests/: test_correlation_calculator.py  test_llm_validator.py  test_momentum_calculator.py  test_options_calculator.py  test_pdf_parser_dynamic.py  test_phase4_agent_tools.py  test_portfolio_optimizer.py  test_risk_calculator.py
(+136 files in other folders)
