[project]
name = "numan-portfolio"
version = "1.2.0"
description = "NUMAN Portfolio Intelligence Platform with Claude Vision"
requires-python = ">=3.10"
dependencies = [
    # MCP Server
    "mcp[cli]>=1.0.0", # Include CLI tools (mcp dev, mcp inspect)
    # LLM Providers
    "anthropic>=0.39.0",
    # PDF Parsing
    "pdfplumber>=0.11.0",
    "pymupdf>=1.24.0", # fitz - PDF to image conversion for Claude Vision
    # Data Validation
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    # Market Data
    "yfinance>=0.2.40",
    # Data Analysis
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    # Database
    "sqlalchemy>=2.0.0",
    "sqlmodel>=0.0.22",
    # HTTP Client
    "httpx>=0.27.0",
    # Utilities
    "python-dotenv>=1.0.0",
    "python-multipart>=0.0.12",
    "fastmcp>=2.14.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools]
packages = ["app", "mcp_server"]

[tool.setuptools.package-data]
app = ["py.typed"]
mcp_server = ["py.typed"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]
